--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
 
 <body>
     <main>
-        <article>
-            <img src="/girl.jpg" alt="Avatar Monia" />
-        </article>
-        <header>
-            <h1> Monika Bysiak</h1>
-            <p>junior frontend developer</p>
-        </header>
-        <p>Zaczyna przygodę z frontenem.<br/>Prywatnie żona i mama dwóch córek.<br /> Uwielbia spotkania z
-            przyjaciółkami, zumbę i tabatę. Lubi jeść pizzę, której nigdy nie odmawia. </p>
-            <p>W sieci: <a href="#">Facebook</a>, <a href="#">GitHub</a>, <a href="#">Instagram</a>.</p>
+        <div class="card">
+            <article>
+                <img class="card__photo" src="/girl.jpg" alt="Avatar Monia" />
+            </article>
+            <article class="card__text">
+                <header>
+                    <h1 class="card__header"> Monika Bysiak</h1>
+                    <p class="card__position">junior frontend developer</p>
+                </header>
+                <p class="card__description">Zaczyna przygodę z frontenem.<br />Prywatnie żona i mama dwóch córek.<br /> Uwielbia spotkania z
+                    przyjaciółkami, zumbę i tabatę. <br/>Lubi jeść pizzę, której nigdy nie odmawia. </p>
+                <p>W sieci: <a href="#">Facebook</a>, <a href="#">GitHub</a>, <a href="#">Instagram</a>.</p>
+            </article>
+        </div>
     </main>
-
+   
 </body>
 
 </html>
