--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </header>
                 <p class="card__description">Zaczyna przygodę z frontenem.<br />Prywatnie żona i mama dwóch córek.<br /> Uwielbia spotkania z
                     przyjaciółkami, zumbę i tabatę. <br/>Lubi jeść pizzę, której nigdy nie odmawia. </p>
-                <p>W sieci: <a href="#">Facebook</a>, <a href="#">GitHub</a>, <a href="#">Instagram</a>.</p>
+                <p class="card__description">W sieci: <a href="#">Facebook</a>, <a href="#">GitHub</a>, <a href="#">Instagram</a>.</p>
             </article>
         </div>
     </main>
