--- a/index.html
+++ b/index.html
@@ -12,21 +12,22 @@
 <body>
     <main>
         <div class="card">
-            <article>
-                <img class="card__photo" src="/girl.jpg" alt="Avatar Monia" />
-            </article>
+            <img class="card__photo" src="/girl.jpg" alt="Avatar Monia" />
             <article class="card__text">
                 <header>
                     <h1 class="card__header"> Monika Bysiak</h1>
                     <p class="card__position">junior frontend developer</p>
                 </header>
-                <p class="card__description">Zaczyna przygodę z frontenem.<br />Prywatnie żona i mama dwóch córek.<br /> Uwielbia spotkania z
-                    przyjaciółkami, zumbę i tabatę. <br/>Lubi jeść pizzę, której nigdy nie odmawia. </p>
-                <p class="card__description">W sieci: <a class="card__description--link" href="#">Facebook</a>, <a class="card__description--link" href="#">GitHub</a>, <a class="card__description--link" href="#">Instagram</a>.</p>
+                <p class="card__description">Zaczyna przygodę z frontenem.<br>Prywatnie żona i mama dwóch córek.<br>
+                    Uwielbia spotkania z przyjaciółkami, zumbę i tabatę. <br>Lubi jeść pizzę, której nigdy nie odmawia.
+                </p>
+                <p class="card__description">W sieci: <a class="card__description--link" href="#">Facebook</a>, <a
+                        class="card__description--link" href="#">GitHub</a>, <a class="card__description--link"
+                        href="#">Instagram</a>.</p>
             </article>
         </div>
     </main>
-   
+
 </body>
 
 </html>
