changing class card__link

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <p class="card__description">Zaczyna przygodę z frontenem.<br>Prywatnie żona i mama dwóch córek.<br>
                     Uwielbia spotkania z przyjaciółkami, zumbę i tabatę. <br>Lubi jeść pizzę, której nigdy nie odmawia.
                 </p>
-                <p class="card__description">W sieci: <a class="card__description--link" href="#">Facebook</a>, <a
-                        class="card__description--link" href="#">GitHub</a>, <a class="card__description--link"
+                <p class="card__description">W sieci: <a class="card__link" href="#">Facebook</a>, <a
+                        class="card__link" href="#">GitHub</a>, <a class="card__link"
                         href="#">Instagram</a>.</p>
             </article>
         </div>
