--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wizytówka Monia</title>
-    <link href="/normalize.css" rel="stylesheet" type="text/css">
-    <link href="/style.css" rel="stylesheet" type="text/css">
+    <link href="normalize.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
     <main>
         <div class="card">
-            <img class="card__photo" src="/girl.jpg" alt="Avatar Monia" />
+            <img class="card__photo" src="girl.jpg" alt="Avatar Monia" />
             <article class="card__text">
                 <header>
                     <h1 class="card__header"> Monika Bysiak</h1>
