--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img class="card__photo" src="girl.jpg" alt="Avatar Monia" />
             <article class="card__text">
                 <header>
-                    <h1 class="card__header"> Monika Bysiak</h1>
+                    <h1 class="card__header"> Monika Bysiak <span class="span">💗</span></h1>
                     <p class="card__position">junior frontend developer</p>
                 </header>
                 <p class="card__description">Zaczyna przygodę z frontenem.<br>Prywatnie żona i mama dwóch córek.<br>
